--- a/themes/roxo-hugo/layouts/partials/portfolio.html
+++ b/themes/roxo-hugo/layouts/partials/portfolio.html
@@ -9,22 +9,22 @@
             <p>{{ .subtitle }}</p>
           </div>
         </div>
-        {{ range first 4 (where $.Site.RegularPages "Type" "portfolio") }}
+
+        {{ range first 10 (where $.Site.RegularPages "Type" "urunler") }}
         <div class="col-lg-6 col-md-10 mx-auto">
           <div class="site-project-item">
             <div class="site-project-item-thumb">
               <img src="{{ .Params.Image | absURL }}" alt="project-thumb">
             </div>
             <div class="site-project-item-content">
-              <span>{{ delimit .Params.category ", " }}</span>
               <h3>{{ .Title }}</h3>
-              <a href="{{ .Permalink }}" class="read-more">view project</a>
+              <a href="{{ .Permalink }}" class="read-more">Hepsini Gör</a>
             </div>
           </div>
         </div>
         {{ end }}
         <div class="col-12 text-center text-lg-left">
-          <a href="portfolio" class="site-project-cta">MORE WORKS</a>
+          <a href="urunler" class="site-project-cta">Daha Fazla</a>
         </div>
       </div>
     </div>
