--- a/themes/roxo-hugo/layouts/urunler/single.html
+++ b/themes/roxo-hugo/layouts/urunler/single.html
@@ -26,7 +26,7 @@
       </div>
       {{ end }}
       <div class="col-12 text-center text-lg-left">
-        <a href="{{ "urunler" | absURL }}" class="site-project-cta">Tüm Ürünleri Gör</a>
+        <a href="{{ "urunler" | absURL }}" class="site-project-cta">Tüm Çeşitleri Gör</a>
       </div>
     </div>
   </div>
