--- a/themes/roxo-hugo/layouts/partials/portfolio.html
+++ b/themes/roxo-hugo/layouts/partials/portfolio.html
@@ -14,7 +14,9 @@
         <div class="col-lg-6 col-md-10 mx-auto">
           <div class="site-project-item">
             <div class="site-project-item-thumb">
-              <img src="{{ .Params.Image | absURL }}" alt="project-thumb">
+              <a href="{{ .Permalink }}">
+                <img src="{{ .Params.Image | absURL }}" alt="project-thumb">
+              </a>
             </div>
             <div class="site-project-item-content">
               <h3>{{ .Title }}</h3>
